--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,40 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 
+# Prerequisites
+*.d
+
+## C++
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+# Precompiled Headers
+*.gch
+*.pch
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+# Fortran module files
+*.mod
+*.smod
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+# Executables
+*.exe
+*.out
+*.app
+
+# google-test
+*.pc
+googletest-*
+
 .idea/
 /filesystem/Debug/
+.vscode
+
