Make tests available.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,5 +58,5 @@ file(GLOB TEST_SOURCES test/*.cpp)
 add_executable(Test ${TEST_SOURCES})
 target_link_libraries(Test DBLib)
 target_link_libraries(Test gtest gtest_main)
-target_link_libraries(Test gmock gmock_main)
+#target_link_libraries(Test gmock gmock_main)
 #add_test(NAME example_test COMMAND example)
